--- a/rl/hello_rl.ipynb
+++ b/rl/hello_rl.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOMeKnV4p4UhjUL3oWezWid",
+      "authorship_tag": "ABX9TyP0JyfJMKGnN4ireK9YGG6A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "JGGLU3jGmaWG"
       },
@@ -43,7 +43,7 @@
       "source": [
         "# @title Q Learning\n",
         "\n",
-        "import gym\n",
+        "import gymasium\n",
         "import tensorflow as tf\n",
         "import numpy as np\n"
       ],
