--- a/rl/hello_rl.ipynb
+++ b/rl/hello_rl.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0JyfJMKGnN4ireK9YGG6A",
+      "authorship_tag": "ABX9TyOPhBQSrTHt+RCgV4WZ0YDU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "JGGLU3jGmaWG"
       },
@@ -43,12 +43,61 @@
       "source": [
         "# @title Q Learning\n",
         "\n",
-        "import gymasium\n",
+        "import gymnasium\n",
         "import tensorflow as tf\n",
-        "import numpy as np\n"
+        "import numpy as np\n",
+        "from collections import deque\n",
+        "from dataclasses import dataclass"
       ],
       "metadata": {
         "id": "0hCF28Cxmkgd"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Memory:\n",
+        "    def __init__(self, max_size: int = 1000):\n",
+        "        self.data = deque(maxlen=max_size)\n",
+        "\n",
+        "    def append(self, item):\n",
+        "        self.data.append(item)\n",
+        "\n",
+        "    def sample(self, batch_size: int = 4):\n",
+        "        indices = np.random.randint(0, len(self.data), batch_size)\n",
+        "        return [self.data[idx] for idx in indices]\n",
+        "\n",
+        "_memory = Memory(4)\n",
+        "[_memory.append(x) for x in [1, 2, 3, 4, 5, 6, 7]]\n",
+        "print(_memory.data)\n",
+        "print(_memory.sample(3))"
+      ],
+      "metadata": {
+        "id": "2QysTu4dQsZe",
+        "outputId": "ca7177b6-7bac-447c-f3c6-25654c5ca642",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "deque([4, 5, 6, 7], maxlen=4)\n",
+            "[7, 7, 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Fry8rv3QcOgc"
       },
       "execution_count": null,
       "outputs": []
