--- a/rl/hello_rl.ipynb
+++ b/rl/hello_rl.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPhBQSrTHt+RCgV4WZ0YDU",
+      "authorship_tag": "ABX9TyPEjGkKF9IEsVQBeUJjud+n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "JGGLU3jGmaWG"
       },
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "0hCF28Cxmkgd"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +95,26 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from flax import nnx\n",
+        "\n",
+        "\n",
+        "class Layer(nnx.Module):\n",
+        "    def __init__(self, dim: int, expansion: int, rngs: nnx.Rngs):\n",
+        "        self.fc1 = nnx.Linear(dim, dim * expansion, rngs=rngs)\n",
+        "        self.fc2 = nnx.Linear(dim * expansion, dim, rngs=rngs)\n",
+        "\n",
+        "    def __call__(self, x):\n",
+        "        z = self.fc1(x)\n",
+        "        z = jax.nn.relu(z)\n",
+        "        z = self.fc2(z)\n",
+        "        return z\n",
+        "\n",
+        "\n",
+        "class QNet(nnx.Module):\n",
+        "    def __init__(self, dim_in: int = 4, d_model: int = 32, num_actions: int = 2, rngs: nnx.Rngs):\n",
+        "        # TODO: figure out if jax has a scan"
+      ],
       "metadata": {
         "id": "Fry8rv3QcOgc"
       },
