--- a/rl/hello_rl.ipynb
+++ b/rl/hello_rl.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEjGkKF9IEsVQBeUJjud+n",
+      "authorship_tag": "ABX9TyP+Rbo6TC6dmLRW3PzXb4Tr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,6 +51,15 @@
       ],
       "metadata": {
         "id": "0hCF28Cxmkgd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Ck6ZoOrgtwSk"
       },
       "execution_count": null,
       "outputs": []
@@ -112,8 +121,18 @@
         "\n",
         "\n",
         "class QNet(nnx.Module):\n",
-        "    def __init__(self, dim_in: int = 4, d_model: int = 32, num_actions: int = 2, rngs: nnx.Rngs):\n",
-        "        # TODO: figure out if jax has a scan"
+        "    def __init__(self, dim_in: int = 4, d_model: int = 32, num_actions: int = 2, num_layers: int = 2, rngs: nnx.Rngs):\n",
+        "        self.in_proj = nnx.Linear(dim_in, d_model, rngs)\n",
+        "        self.out_proj = nnx.Linear(d_model, num_actions, rngs)\n",
+        "        self.layers = [Layer(d_model, 2, rngs) for _layer_idx in range(num_layers)]\n",
+        "\n",
+        "    def __call__(self, x):\n",
+        "        z = self.in_proj(x)\n",
+        "        for layer in self.layers:\n",
+        "            z = layer(z)\n",
+        "        z = self.out_proj(z)\n",
+        "        return z\n",
+        "\n"
       ],
       "metadata": {
         "id": "Fry8rv3QcOgc"
