--- a/rl/policy_gradient.ipynb
+++ b/rl/policy_gradient.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNK/Z4SmLHRfWtxGa2H0n+S",
+      "authorship_tag": "ABX9TyMr4i1uPLQPtue8x1ERG74m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,11 +43,11 @@
         "!pip3 install box2d-py"
       ],
       "metadata": {
-        "id": "AZ8hppjwg0ud",
-        "outputId": "78bcd6e2-c1f4-4770-87d3-f02c2a744535",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AZ8hppjwg0ud",
+        "outputId": "78bcd6e2-c1f4-4770-87d3-f02c2a744535"
       },
       "execution_count": 2,
       "outputs": [
@@ -119,10 +119,10 @@
       "execution_count": 5,
       "metadata": {
         "id": "iYA96SYpT2Vi",
-        "outputId": "e1c5d62f-dc8a-418e-a5d1-bc1290c916f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e1c5d62f-dc8a-418e-a5d1-bc1290c916f3"
       },
       "outputs": [
         {
@@ -262,11 +262,11 @@
         "print(env.observation_space)"
       ],
       "metadata": {
-        "id": "-CpGN14CgRhL",
-        "outputId": "6e5e9e85-b15d-472a-e4e0-64c130bd3d48",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-CpGN14CgRhL",
+        "outputId": "6e5e9e85-b15d-472a-e4e0-64c130bd3d48"
       },
       "execution_count": 6,
       "outputs": [
@@ -301,7 +301,8 @@
         "    env,\n",
         "    current_state,\n",
         "    rng,\n",
-        "    render: bool = False\n",
+        "    greedy: bool = True,\n",
+        "    render: bool = False,\n",
         ") -> tuple[Datum, np.ndarray]:\n",
         "    action = env.action_space.sample()\n",
         "    on_policy_t = False\n",
@@ -310,7 +311,10 @@
         "            pass\n",
         "        else:\n",
         "            pi_a = policy_model(current_state)\n",
-        "            action = pi_a.argmax()\n",
+        "            if greedy:\n",
+        "                action = pi_a.argmax()\n",
+        "            else:\n",
+        "                action =\n",
         "            on_policy_t = True\n",
         "    frame_hwc = env.render() if render else None\n",
         "    new_state, reward, t0, t1, _ = env.step(action)\n",
@@ -341,12 +345,12 @@
         ")"
       ],
       "metadata": {
-        "id": "_1mhMODcgxcJ",
-        "outputId": "56426881-7616-4cae-879e-92910b203523",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 493
-        }
+        },
+        "id": "_1mhMODcgxcJ",
+        "outputId": "56426881-7616-4cae-879e-92910b203523"
       },
       "execution_count": 8,
       "outputs": [
@@ -381,9 +385,83 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class Layer(nnx.Module):\n",
+        "    def __init__(self, dim: int, rngs: nnx.Rngs):\n",
+        "        self.fc1 = nnx.Linear(dim, dim, rngs=rngs)\n",
+        "\n",
+        "    def __call__(self, x):\n",
+        "        z = self.fc1(x)\n",
+        "        z = jax.nn.relu(z)\n",
+        "        return z\n",
+        "\n",
+        "\n",
+        "class PolicyNetwork(nnx.Module):\n",
+        "    # same shape and stuff as QNet\n",
+        "    def __init__(self, dim_in: int = 4, d_model: int = 32, num_actions: int = 2, num_layers: int = 2, rngs: nnx.Rngs | None = None):\n",
+        "        self.in_proj = nnx.Linear(dim_in, d_model, rngs=rngs)\n",
+        "        self.out_proj = nnx.Linear(d_model, num_actions, rngs=rngs)\n",
+        "        self.layers = [Layer(d_model, rngs) for _layer_idx in range(num_layers)]\n",
+        "\n",
+        "    def __call__(self, x):\n",
+        "        z = self.in_proj(x)\n",
+        "        for layer in self.layers:\n",
+        "            z = layer(z)\n",
+        "        z = self.out_proj(z)\n",
+        "        return z\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
         "id": "ws5erLDK3ikJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\" Policy gradients\n",
+        "\n",
+        "J(\\theta) = \\mathbb{E}_{\\tau~\\pi}[reward(\\tau)]\n",
+        "\n",
+        "after taking gradient, we get this interesting form:\n",
+        "\\grad_{\\theta} J(\\theta) = \\mathbb{E}_{\\tau~\\pi}[Q(s, a) \\grad ln(\\pi(a | s))]\n",
+        "\"\"\"\n",
+        "\n",
+        "from dataclasses import dataclass\n",
+        "\n",
+        "\n",
+        "@struct.dataclass\n",
+        "class Hyperparams:\n",
+        "    num_training_episodes: int\n",
+        "\n",
+        "\n",
+        "@dataclass\n",
+        "class State:\n",
+        "    update_idx: int\n",
+        "    episode_idx: int\n",
+        "    step_idx: int\n",
+        "\n",
+        "\n",
+        "params = Hyperparams\n",
+        "\n",
+        "state = State\n",
+        "while True:\n",
+        "    if episode_idx == params.num_training_episodes:\n",
+        "        break"
+      ],
+      "metadata": {
+        "id": "LndM3nOj87OM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JW-t0jac3rl3"
       },
       "execution_count": null,
       "outputs": []
