--- a/rl/policy_gradient.ipynb
+++ b/rl/policy_gradient.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMr4i1uPLQPtue8x1ERG74m",
+      "authorship_tag": "ABX9TyMurQou7kmnMAt7JaDAaA43",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -314,8 +314,9 @@
         "            if greedy:\n",
         "                action = pi_a.argmax()\n",
         "            else:\n",
-        "                action =\n",
+        "                action = jax.random.multinomial(rng.params(), 1, jnp.exp(pi_a))\n",
         "            on_policy_t = True\n",
+        "\n",
         "    frame_hwc = env.render() if render else None\n",
         "    new_state, reward, t0, t1, _ = env.step(action)\n",
         "    done = (t0 or t1)\n",
@@ -434,7 +435,13 @@
         "\n",
         "@struct.dataclass\n",
         "class Hyperparams:\n",
-        "    num_training_episodes: int\n",
+        "    max_num_training_episodes: int\n",
+        "    max_num_updates: int\n",
+        "\n",
+        "    seed: int = 1337\n",
+        "    explore_start = 1.0            # exploration probability at start\n",
+        "    explore_stop = 0.01            # minimum exploration probability\n",
+        "    decay_rate = 0.0001            # exponential decay rate for exploration prob\n",
         "\n",
         "\n",
         "@dataclass\n",
@@ -444,12 +451,36 @@
         "    step_idx: int\n",
         "\n",
         "\n",
-        "params = Hyperparams\n",
+        "params = Hyperparams(\n",
+        "    max_num_training_episodes=1000,\n",
+        "    max_num_updates=1000,\n",
+        ")\n",
+        "rngs = nnx.Rngs(default=params.seed)\n",
+        "num_actions = env.action_space.n\n",
+        "dim_in = env.observation_space.shape[0]\n",
         "\n",
-        "state = State\n",
+        "policy_model = PolicyNetwork(dim_in, params.d_model, num_actions, params.n_layers, rngs)\n",
+        "optimizer = nnx.Optimizer(qnet, optax.adamw(params.lr), wrt=nnx.Param)\n",
+        "ckpt_dir = ocp.test_utils.erase_and_create_empty(params.ckpt_dir)\n",
+        "checkpointer = ocp.StandardCheckpointer()\n",
+        "\n",
+        "state = State(0, 0, 0)\n",
+        "\n",
+        "\n",
+        "def done_fn(state: State, params: Hyperparams):\n",
+        "    return (state.update_idx >= params.max_num_updates) or (state.episode_idx >= params.max_num_training_episodes)\n",
+        "\n",
+        "def make_batch(trajectory) ->\n",
         "while True:\n",
-        "    if episode_idx == params.num_training_episodes:\n",
-        "        break"
+        "    if done_fn(state, params):\n",
+        "        break\n",
+        "    current_state, _ = env.reset()\n",
+        "    explore_p = params.explore_stop + (params.explore_start - params.explore_stop) * np.exp(-params.decay_rate * state.update_idx)\n",
+        "    trajectory = play(policy_model, explore_p, env, current_state, rng=rngs, greedy=False, render=False)\n",
+        "    state.step_idx += len(trajectory)\n",
+        "    state.episode_idx += 1\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "LndM3nOj87OM"
