--- a/rl/policy_gradient.ipynb
+++ b/rl/policy_gradient.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMurQou7kmnMAt7JaDAaA43",
+      "authorship_tag": "ABX9TyMRmhGD8NIGCM9MYuqP8dro",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -135,7 +135,7 @@
         }
       ],
       "source": [
-        "# @title Policy Gradients?\n",
+        "# @title Environment Set up and Rendering\n",
         "\n",
         "import gymnasium\n",
         "import numpy as np\n",
@@ -161,6 +161,7 @@
         "from scipy.ndimage.filters import gaussian_filter1d\n",
         "import orbax.checkpoint as ocp\n",
         "from flax import nnx\n",
+        "from IPython.display import clear_output\n",
         "\n",
         "def show_mp4_from_frames_imageio(\n",
         "    frames,\n",
@@ -291,9 +292,11 @@
         "    s_tp1: jax.Array\n",
         "    r_t: jax.Array\n",
         "    a_t: jax.Array\n",
+        "    logp_a_t: jax.Array | None\n",
         "    done: bool\n",
         "    on_policy_t: bool\n",
         "    frame_hwc: np.ndarray | None = None\n",
+        "\n",
         "\n",
         "def play(\n",
         "    policy_model,\n",
@@ -305,16 +308,18 @@
         "    render: bool = False,\n",
         ") -> tuple[Datum, np.ndarray]:\n",
         "    action = env.action_space.sample()\n",
+        "    logp_a_t = None\n",
         "    on_policy_t = False\n",
         "    if (policy_model is not None):\n",
         "        if (jax.random.bernoulli(rng.params(), exploration_probability, shape=None)):\n",
         "            pass\n",
         "        else:\n",
         "            pi_a = policy_model(current_state)\n",
+        "            logp_a_t = pi_a\n",
         "            if greedy:\n",
         "                action = pi_a.argmax()\n",
         "            else:\n",
-        "                action = jax.random.multinomial(rng.params(), 1, jnp.exp(pi_a))\n",
+        "                action = jax.random.multinomial(rng.params(), 1, jax.nn.softmax(pi_a))\n",
         "            on_policy_t = True\n",
         "\n",
         "    frame_hwc = env.render() if render else None\n",
@@ -325,25 +330,28 @@
         "        s_tp1=new_state,\n",
         "        r_t=reward,\n",
         "        a_t=action,\n",
+        "        logp_a_t=logp_a_t,\n",
         "        done=done,\n",
         "        on_policy_t=on_policy_t,\n",
-        "        frame_hwc=frame_hwc\n",
+        "        frame_hwc=frame_hwc,\n",
         "    )\n",
         "    return datum, new_state\n",
         "\n",
-        "n_steps = 100\n",
-        "trajectory = []\n",
-        "rngs = nnx.Rngs(default=1337)\n",
-        "state, _ = env.reset()\n",
-        "for step_idx in range(n_steps):\n",
-        "    datum, state = play(None, 1, env, state, rngs, True)\n",
-        "    trajectory.append(datum)\n",
+        "\n",
+        "def demo(model=None):\n",
+        "    n_steps = 100\n",
+        "    trajectory = []\n",
+        "    rngs = nnx.Rngs(default=1337)\n",
+        "    state, _ = env.reset()\n",
+        "    for step_idx in range(n_steps):\n",
+        "        datum, state = play(model, 0.0, env, state, rngs, greedy=False, render=True)\n",
+        "        trajectory.append(datum)\n",
         "\n",
         "\n",
-        "show_mp4_from_frames_imageio(\n",
-        "    [d.frame_hwc for d in trajectory],\n",
-        "    [f\"action: {d.a_t}\" for d in trajectory],\n",
-        ")"
+        "    show_mp4_from_frames_imageio(\n",
+        "        [d.frame_hwc for d in trajectory],\n",
+        "        [f\"action: {d.a_t}\" for d in trajectory],\n",
+        "    )"
       ],
       "metadata": {
         "colab": {
@@ -387,6 +395,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# @title Model\n",
+        "\n",
         "class Layer(nnx.Module):\n",
         "    def __init__(self, dim: int, rngs: nnx.Rngs):\n",
         "        self.fc1 = nnx.Linear(dim, dim, rngs=rngs)\n",
@@ -422,21 +432,21 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\"\" Policy gradients\n",
-        "\n",
+        "# @title Policy gradients - REINFORCE\n",
+        "\"\"\"\n",
         "J(\\theta) = \\mathbb{E}_{\\tau~\\pi}[reward(\\tau)]\n",
         "\n",
         "after taking gradient, we get this interesting form:\n",
         "\\grad_{\\theta} J(\\theta) = \\mathbb{E}_{\\tau~\\pi}[Q(s, a) \\grad ln(\\pi(a | s))]\n",
         "\"\"\"\n",
         "\n",
-        "from dataclasses import dataclass\n",
+        "from dataclasses import dataclass, field\n",
         "\n",
         "\n",
         "@struct.dataclass\n",
         "class Hyperparams:\n",
-        "    max_num_training_episodes: int\n",
-        "    max_num_updates: int\n",
+        "    num_training_episodes: int\n",
+        "    max_episode_length: int\n",
         "\n",
         "    seed: int = 1337\n",
         "    explore_start = 1.0            # exploration probability at start\n",
@@ -444,16 +454,24 @@
         "    decay_rate = 0.0001            # exponential decay rate for exploration prob\n",
         "\n",
         "\n",
+        "@struct.dataclass\n",
+        "class TensorTrajectory:\n",
+        "    s_t_TD: jax.Array\n",
+        "    s_tp1_TD: jax.Array\n",
+        "    r_t_T: jax.Array\n",
+        "    a_t_T: jax.Array\n",
+        "    done_t_T: jax.Array\n",
+        "    logpa_t_TA: jax.Array\n",
+        "\n",
+        "\n",
         "@dataclass\n",
         "class State:\n",
         "    update_idx: int\n",
-        "    episode_idx: int\n",
-        "    step_idx: int\n",
-        "\n",
+        "    losses: list[float] = field(default_factory=list)\n",
+        "    rewards: list[float] = field(default_factory=list)\n",
         "\n",
         "params = Hyperparams(\n",
-        "    max_num_training_episodes=1000,\n",
-        "    max_num_updates=1000,\n",
+        "    num_training_episodes=1000,\n",
         ")\n",
         "rngs = nnx.Rngs(default=params.seed)\n",
         "num_actions = env.action_space.n\n",
@@ -468,19 +486,103 @@
         "\n",
         "\n",
         "def done_fn(state: State, params: Hyperparams):\n",
-        "    return (state.update_idx >= params.max_num_updates) or (state.episode_idx >= params.max_num_training_episodes)\n",
+        "    return (state.update_idx >= params.max_num_updates)\n",
         "\n",
-        "def make_batch(trajectory) ->\n",
-        "while True:\n",
-        "    if done_fn(state, params):\n",
-        "        break\n",
-        "    current_state, _ = env.reset()\n",
-        "    explore_p = params.explore_stop + (params.explore_start - params.explore_stop) * np.exp(-params.decay_rate * state.update_idx)\n",
-        "    trajectory = play(policy_model, explore_p, env, current_state, rng=rngs, greedy=False, render=False)\n",
-        "    state.step_idx += len(trajectory)\n",
-        "    state.episode_idx += 1\n",
         "\n",
-        ""
+        "\n",
+        "@struct.dataclass\n",
+        "class Batch:\n",
+        "    s_t_BD: np.ndarray\n",
+        "    a_t_B: np.ndarray\n",
+        "    r_t_B: np.ndarray\n",
+        "    g_t_B: np.ndarray | None\n",
+        "\n",
+        "\n",
+        "def compute_g(rewards: list[float], discount_rate: float) -> list[float]:\n",
+        "    g = 0\n",
+        "    g_t_B = []\n",
+        "    for r in rewards[::-1]:\n",
+        "        g = r + discount_rate * g\n",
+        "        g_t_B.append(g)\n",
+        "    return g_t_B[::-1]\n",
+        "\n",
+        "\n",
+        "def collate(params: Hyperparameters, trajectory: list[Datum]) -> Batch:\n",
+        "    states = []\n",
+        "    actions = []\n",
+        "    rewards = []\n",
+        "    for d in trajectory:\n",
+        "        states.append(d.s_t)\n",
+        "        rewards.append(d.r_t)\n",
+        "        actions.append(d.a_t)\n",
+        "\n",
+        "    g = compute_g(params, rewards)\n",
+        "    states = np.array(states)\n",
+        "    rewards = np.array(rewards)\n",
+        "    actions = np.array(actions)\n",
+        "    return Batch(\n",
+        "        s_t_BD=states,\n",
+        "        r_t_B=rewards,\n",
+        "        a_t_B=actions\n",
+        "        g_t_B=None,\n",
+        "    )\n",
+        "\n",
+        "\n",
+        "def unroll(params, env) -> TensorTrajectory:\n",
+        "    trajectory = []\n",
+        "    state, _ = env.reset()\n",
+        "    for step in range(params.max_episode_length):\n",
+        "        datum, state = play()\n",
+        "        trajectory.append(datum)\n",
+        "    return collate(params, trajectory)\n",
+        "\n",
+        "# train loop\n",
+        "def loss_fn(model, s_t_D, a_t, g_t):\n",
+        "    logits = model(s_t_D)\n",
+        "    logp = jax.nn.log_softmax(logits)\n",
+        "    logp_a_t = logp[a_t]\n",
+        "    return -logp_a_t * g_t\n",
+        "\n",
+        "batched_loss_fn = jax.vmap(loss_fn, in_axes=(None, 0, 0, 0))\n",
+        "\n",
+        "for train_step in range(params.num_training_episodes):\n",
+        "    batch = unroll(params, env)\n",
+        "\n",
+        "    def closure(model, rngs_for_closure):\n",
+        "        batch_loss = batched_loss_fn(model, batch.s_t_BD, batch.a_t_B, batch.g_t_B)\n",
+        "        return batch_loss.mean()\n",
+        "\n",
+        "    (loss, grads) = nnx.value_and_grad(closure)(model, rngs)\n",
+        "    optimizer.update(grads)\n",
+        "    state.losses.append(float(loss))\n",
+        "    state.rewards.append(float(batch.r_t_B.sum()))\n",
+        "\n",
+        "    state.update_idx = train_step\n",
+        "    done = done_fn(state, params)\n",
+        "    if done or train_step % plot_interval == 0:\n",
+        "        clear_output(wait=True)\n",
+        "\n",
+        "        # plot losses and rewards\n",
+        "        fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(12, 4))\n",
+        "        sns.lineplot(x=range(len(plot_loss)), y=plot_loss, ax=axes[0])\n",
+        "        smooth_loss = gaussian_filter1d(plot_loss, sigma=2)\n",
+        "        sns.lineplot(x=range(len(plot_loss)), y=smooth_loss, ax=axes[0], label=\"smooth\", legend=\"auto\")\n",
+        "        axes[0].set_xlabel(\"Training step\")\n",
+        "        axes[0].set_ylabel(\"Loss\")\n",
+        "        axes[0].set_title(\"Training loss curve\")\n",
+        "\n",
+        "        sns.lineplot(x=range(len(plot_reward)), y=plot_reward, ax=axes[1])\n",
+        "        smooth_reward = gaussian_filter1d(plot_reward, sigma=2)\n",
+        "        sns.lineplot(x=range(len(plot_reward)), y=smooth_reward, ax=axes[1], label=\"smooth\", legend=\"auto\")\n",
+        "\n",
+        "        axes[1].set_xlabel(\"Training step\")\n",
+        "        axes[1].set_ylabel(\"Reward\")\n",
+        "        axes[1].set_title(\"Training reward curve\")\n",
+        "        plt.tight_layout()\n",
+        "        plt.show()\n",
+        "\n",
+        "    if done:\n",
+        "        break\n"
       ],
       "metadata": {
         "id": "LndM3nOj87OM"
