--- a/rl/policy_gradient.ipynb
+++ b/rl/policy_gradient.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2RmiZuW2jiXblF4aUKfcn",
+      "authorship_tag": "ABX9TyNfHKSPgU0HV0dZqi03Eaft",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -427,6 +427,8 @@
         "    decay_rate = 0.0001            # exponential decay rate for exploration prob\n",
         "\n",
         "    plot_interval: int = 10\n",
+        "    discount_rate: float = 0.99\n",
+        "\n",
         "\n",
         "@struct.dataclass\n",
         "class TensorTrajectory:\n",
@@ -490,7 +492,7 @@
         "        rewards.append(d.r_t)\n",
         "        actions.append(d.a_t)\n",
         "\n",
-        "    g = compute_g(params, rewards)\n",
+        "    g = compute_g(rewards,  params.discount_rate)\n",
         "    states = np.array(states)\n",
         "    rewards = np.array(rewards)\n",
         "    actions = np.array(actions)\n",
